--- a/LinqHelper/LinqHelper.csproj
+++ b/LinqHelper/LinqHelper.csproj
@@ -1,15 +1,16 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
     <RootNamespace>Mael</RootNamespace>
     <Authors>Paolo Crociati</Authors>
     <Description>Helper for Linq and DynamicLinq in .NET Core.
-It contains extensions to easily perform left joins.</Description>
+Extensions to easily perform left joins on IQueryable objects.</Description>
     <Copyright>Paolo Crociati</Copyright>
     <AssemblyVersion>0.0.1.0</AssemblyVersion>
     <FileVersion>0.0.1.0</FileVersion>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+    <Version>0.0.1</Version>
   </PropertyGroup>
 
   <ItemGroup>
