Updated Package details

--- a/LinqHelper/LinqHelper.csproj
+++ b/LinqHelper/LinqHelper.csproj
@@ -11,6 +11,8 @@ Extensions to easily perform left joins on IQueryable objects.</Description>
     <FileVersion>0.0.1.0</FileVersion>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
     <Version>0.0.1</Version>
+    <PackageRequireLicenseAcceptance>true</PackageRequireLicenseAcceptance>
+    <PackageLicenseExpression>MIT</PackageLicenseExpression>
   </PropertyGroup>
 
   <ItemGroup>
